tests/valid/trait/multiple_bounds.facet
trait Show;
trait Debug;

struct Box<T> where T: Show + Debug {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
