tests/invalid/trait/bound_trait_arg_unknown_type.facet
trait Convert<T>;

struct Box<T> where T: Convert<affine Missing> {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
